# FTL_Agentic_Course

./: README.md  main.py  pyproject.toml  pytest.ini  requirements.txt
notebooks/: lab5.ipynb  trip_planning_agent_lab_v4.ipynb
session2_tool_use_agent/: demo_error_handling.py  demo_multi_step.py  test_agent_loop.py  test_error_handling.py  test_state_memory.py  test_tools_direct.py
session2_tool_use_agent/src/agent/: loop.py  state.py
session2_tool_use_agent/src/tools/: __init__.py  execution.py  schemas.py
session2_tool_use_agent/tests/: test_tools.py
